<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Top Menu Bar -->

            <!-- Featured Show Banner -->

            <!-- Show Description -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_launcher_foreground" />

                <TextView
                    android:id="@+id/tvshows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="TV Shows"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/movies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/movies"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/categories"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/banner_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/exciting_reality_tv_competition"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="59dp"
                    android:layout_marginBottom="4dp"
                    android:background="@null"
                    android:scaleType="centerInside"
                    android:src="@drawable/button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageButton5"
                    app:tint="@null" />

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="169dp"
                    android:layout_height="36dp"
                    android:background="@null"
                    android:scaleType="centerInside"
                    android:src="@drawable/type_mylist"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@null" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="60dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/info" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Continue Watching Section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/continue_watching_for_ellie"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <HorizontalScrollView
                        android:id="@+id/continue_watching_scroll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:scrollbars="none">

                        <LinearLayout
                            android:id="@+id/continue_watching_container"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" />
                    </HorizontalScrollView>

                </LinearLayout>
            </HorizontalScrollView>

            <!-- Additional Movie Genres Section -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/action"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/action_movies_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:text="@string/action" />
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/comedy"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/comedy_movies_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:text="Comedy" />
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/horror"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/horror_movies_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:text="Horror" />
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/thriller"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:id="@+id/thriller_movies_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:text="Thriller" />
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>

    <!-- Bottom Navigation Bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="47dp"
        android:background="@color/black"
        android:gravity="center">


        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="101dp"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:background="@null"
            android:contentDescription="Home"
            android:scaleType="centerInside"
            android:src="@drawable/home_global"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="102dp"
            android:layout_height="54dp"
            android:layout_marginStart="108dp"
            android:background="@null"
            android:contentDescription="Search"
            android:scaleType="centerInside"
            android:src="@drawable/search_global"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="101dp"
            android:layout_height="52dp"
            android:layout_marginStart="208dp"
            android:background="@null"
            android:contentDescription="Downloads"
            android:scaleType="centerInside"
            android:src="@drawable/global_download"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/imageButton10"
            android:layout_width="102dp"
            android:layout_height="47dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="4dp"
            android:background="@null"
            android:contentDescription="Profile"
            android:scaleType="centerInside"
            android:src="@drawable/profile_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
